CustomObjects/objects/blng__ErrorLog__c.object
<CustomObject>
    <description>Next Generation Billing exception log object. It keeps track of all the exception in the org. Logging can be switched off and on using NGBExceptionSwitch label.</description>
    <fields>
        <fullName>blng__BatchJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Job</label>
        <referenceTo>blng__BillingBatchJob__c</referenceTo>
        <relationshipName>BatchJobErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ErrorCode__c</fullName>
        <description>Code of exception. For standard exception it would be name e.g. DMLException. For custom exceptions it would be Error code defined by us. E.g. Batch 101 – Invoice batch transaction failed, Batch 202 – Payment batch transaction failed. This field will have only Batch 101 as value.</description>
        <label>Error Code</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ErrorName__c</fullName>
        <label>Error Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ErrorOrigin__c</fullName>
        <label>Error Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__FullErrorLog__c</fullName>
        <description>Actual message of the exception.</description>
        <label>Full Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipName>InvoiceLineErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipName>InvoiceRunErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Scheduler</label>
        <referenceTo>blng__InvoiceScheduler__c</referenceTo>
        <relationshipName>InvoiceSchedulerErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>OrderProductErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Error Logs (Order)</relationshipLabel>
        <relationshipName>OrdersErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OriginMethod__c</fullName>
        <label>Origin Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__PaymentRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Run</label>
        <referenceTo>blng__PaymentRun__c</referenceTo>
        <relationshipName>PaymentRunErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Scheduler</label>
        <referenceTo>blng__PaymentScheduler__c</referenceTo>
        <relationshipName>PaymentSchedulerErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>ReferenceId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Summary__c</fullName>
        <description>One line description of the exception. For standard it would remain the same e.g. DMLException. For custom it would be a summary e.g. – Payment batch transaction failed.</description>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>blng__PaymentTransaction__c</referenceTo>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Usage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage</label>
        <referenceTo>blng__Usage__c</referenceTo>
        <relationshipName>UsageErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>blng__ErrorCode__c</columns>
        <columns>blng__ErrorName__c</columns>
        <columns>blng__ErrorOrigin__c</columns>
        <columns>blng__FullErrorLog__c</columns>
        <columns>blng__OriginMethod__c</columns>
        <columns>blng__ReferenceId__c</columns>
        <columns>blng__Summary__c</columns>
        <columns>blng__Transaction__c</columns>
        <columns>blng__InvoiceRun__c</columns>
        <columns>blng__InvoiceScheduler__c</columns>
        <columns>blng__PaymentRun__c</columns>
        <columns>blng__PaymentScheduler__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>